// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CraneDataTable renders CraneDataTable with entire dataset correctly 1`] = `
<div>
  <table
    style="width: 100%;"
  >
    <thead
      class="bg-gray-100"
    >
      <tr>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Select
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Time
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Cranes detected
        </th>
      </tr>
    </thead>
    <tbody
      class="bg-white"
    >
      <tr
        class="border-b-2 border-slate-750 rounded"
      >
        <td
          class="whitespace-nowrap px-6 py-4 text-sm font-medium text-gray-900"
        >
          <div
            class="grid items-center w-[5em] grid-rows-1 grid-cols-1"
          >
            <div
              class="w-[3em] h-[10px] border-1 rounded-[1em] shadow-inner bg-slate-200"
              style="grid-row: 1; grid-column: 1;"
            />
            <div
              class="bg-white shadow  border-[1px] border-slate-300: float:top h-[20px] w-[20px] rounded-full"
              style="grid-row: 1; grid-column: 1; margin-left: -10px; transition-delay: 500ms; transition: margin-left 500ms ease;"
            />
          </div>
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg font-medium text-gray-900"
        >
          12:00:00 AM
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg text-gray-900"
        >
          1
           crane
        </td>
      </tr>
      <tr
        class="border-b-2 border-slate-750 rounded"
      >
        <td
          class="whitespace-nowrap px-6 py-4 text-sm font-medium text-gray-900"
        >
          <div
            class="grid items-center w-[5em] grid-rows-1 grid-cols-1"
          >
            <div
              class="w-[3em] h-[10px] border-1 rounded-[1em] shadow-inner bg-slate-200"
              style="grid-row: 1; grid-column: 1;"
            />
            <div
              class="bg-white shadow  border-[1px] border-slate-300: float:top h-[20px] w-[20px] rounded-full"
              style="grid-row: 1; grid-column: 1; margin-left: -10px; transition-delay: 500ms; transition: margin-left 500ms ease;"
            />
          </div>
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg font-medium text-gray-900"
        >
          12:00:01 AM
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg text-gray-900"
        >
          1
           crane
        </td>
      </tr>
      <tr
        class="border-b-2 border-slate-750 rounded"
      >
        <td
          class="whitespace-nowrap px-6 py-4 text-sm font-medium text-gray-900"
        >
          <div
            class="grid items-center w-[5em] grid-rows-1 grid-cols-1"
          >
            <div
              class="w-[3em] h-[10px] border-1 rounded-[1em] shadow-inner bg-slate-200"
              style="grid-row: 1; grid-column: 1;"
            />
            <div
              class="bg-white shadow  border-[1px] border-slate-300: float:top h-[20px] w-[20px] rounded-full"
              style="grid-row: 1; grid-column: 1; margin-left: -10px; transition-delay: 500ms; transition: margin-left 500ms ease;"
            />
          </div>
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg font-medium text-gray-900"
        >
          12:00:01 AM
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg text-gray-900"
        >
          1
           crane
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CraneDataTable renders individual days correctly 1`] = `
<div>
  <table
    style="width: 100%;"
  >
    <thead
      class="bg-gray-100"
    >
      <tr>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Select
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Time
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Cranes detected
        </th>
      </tr>
    </thead>
    <tbody
      class="bg-white"
    >
      <tr
        class="border-b-2 border-slate-750 rounded"
      >
        <td
          class="whitespace-nowrap px-6 py-4 text-sm font-medium text-gray-900"
        >
          <div
            class="grid items-center w-[5em] grid-rows-1 grid-cols-1"
          >
            <div
              class="w-[3em] h-[10px] border-1 rounded-[1em] shadow-inner bg-apian-yellow"
              style="grid-row: 1; grid-column: 1;"
            />
            <div
              class="bg-white shadow  border-[1px] border-slate-300: float:top h-[20px] w-[20px] rounded-full"
              style="grid-row: 1; grid-column: 1; transition-delay: 500ms; transition: margin-left 500ms ease;"
            />
          </div>
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg font-medium text-gray-900"
        >
          12:00:00 AM
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg text-gray-900"
        >
          1
           crane
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CraneDataTable renders individual days correctly 2`] = `
<div>
  <table
    style="width: 100%;"
  >
    <thead
      class="bg-gray-100"
    >
      <tr>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Select
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Time
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Cranes detected
        </th>
      </tr>
    </thead>
    <tbody
      class="bg-white"
    >
      <tr
        class="border-b-2 border-slate-750 rounded"
      >
        <td
          class="whitespace-nowrap px-6 py-4 text-sm font-medium text-gray-900"
        >
          <div
            class="grid items-center w-[5em] grid-rows-1 grid-cols-1"
          >
            <div
              class="w-[3em] h-[10px] border-1 rounded-[1em] shadow-inner bg-apian-yellow"
              style="grid-row: 1; grid-column: 1;"
            />
            <div
              class="bg-white shadow  border-[1px] border-slate-300: float:top h-[20px] w-[20px] rounded-full"
              style="grid-row: 1; grid-column: 1; transition-delay: 500ms; transition: margin-left 500ms ease;"
            />
          </div>
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg font-medium text-gray-900"
        >
          12:00:01 AM
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg text-gray-900"
        >
          1
           crane
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CraneDataTable renders individual days correctly 3`] = `
<div>
  <table
    style="width: 100%;"
  >
    <thead
      class="bg-gray-100"
    >
      <tr>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Select
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Time
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Cranes detected
        </th>
      </tr>
    </thead>
    <tbody
      class="bg-white"
    >
      <tr
        class="border-b-2 border-slate-750 rounded"
      >
        <td
          class="whitespace-nowrap px-6 py-4 text-sm font-medium text-gray-900"
        >
          <div
            class="grid items-center w-[5em] grid-rows-1 grid-cols-1"
          >
            <div
              class="w-[3em] h-[10px] border-1 rounded-[1em] shadow-inner bg-apian-yellow"
              style="grid-row: 1; grid-column: 1;"
            />
            <div
              class="bg-white shadow  border-[1px] border-slate-300: float:top h-[20px] w-[20px] rounded-full"
              style="grid-row: 1; grid-column: 1; transition-delay: 500ms; transition: margin-left 500ms ease;"
            />
          </div>
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg font-medium text-gray-900"
        >
          12:00:01 AM
        </td>
        <td
          class="whitespace-nowrap px-6 py-4 text-lg text-gray-900"
        >
          1
           crane
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CraneDataTable renders no cranes when cranesFilteredByDay is empty 1`] = `
<div>
  <table
    style="width: 100%;"
  >
    <thead
      class="bg-gray-100"
    >
      <tr>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Select
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Time
        </th>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500"
        >
          Cranes detected
        </th>
      </tr>
    </thead>
    <tbody
      class="bg-white"
    />
  </table>
</div>
`;
